Add initial site structure and content
- Created index.html for the home page with navigation and footer.
- Added index.html for the main site with navigation links to other sections.
- Introduced search_index.json for search functionality.
- Added sitemap.xml for search engine optimization.
- Included sitemap.xml.gz for compressed sitemap.

--- a/my-project/mkdocs.yml
+++ b/my-project/mkdocs.yml
@@ -1,4 +1,4 @@
-site_name: My Docs
+site_name: Documentation Workshop
 
 theme:
   name: material
@@ -6,5 +6,6 @@ theme:
 nav:
   - Home: index.md
   - About: about.md
-  - Getting Started: getting-startd.md
+  - Getting Started: getting-started.md
+  - Home (extra): home.md
   - FAQ: faq.md
