Add initial HTML structure and assets for documentation site
- Created index.html for home page with navigation and footer
- Added about.html and getting-started.html templates
- Implemented search functionality with search_index.json
- Generated sitemap.xml and compressed sitemap.xml.gz for SEO
- Included necessary stylesheets and scripts for layout and design

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,8 +4,7 @@ theme:
   name: material
 
 nav:
-  - Home: index.md
+  - Home: home.md
   - About: about.md
   - Getting Started: getting-started.md
-  - Home (extra): home.md
   - FAQ: faq.md
